--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <h2>Featured AI Art</h2>
             <div class="featured-grid">
                 <div class="featured-item">
-                    <img src="assets/placeholder-cat1.jpg" alt="AI Cat Art">
+                    <img src="assets/featured/featured1.png" alt="Featured AI Cat Art">
                     <h3>Majestic Felines</h3>
                 </div>
                 <div class="featured-item">
-                    <img src="assets/placeholder-wildlife1.jpg" alt="AI Wildlife Art">
+                    <img src="assets/featured/featured2.jpg" alt="Featured AI Wildlife Art">
                     <h3>Wildlife Wonders</h3>
                 </div>
                 <div class="featured-item">
-                    <img src="assets/placeholder-cat2.jpg" alt="AI Cat Art">
+                    <img src="assets/featured/featured3.jpg" alt="Featured AI Cat Art">
                     <h3>Fantasy Cats</h3>
                 </div>
             </div>
