--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <img src="assets/logo/logo.jpeg" alt="Wild Aura Logo" class="logo-img">
                 <h1>Wild Aura</h1>
             </div>
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
